# SingleCell

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Install.sh  README.md  model_import.py  pyproject.toml  pyvenv.cfg  requirements.txt
amici_models/: README.md
benchmarks/: README.md
benchmarks/BIM-dependent-ERK-inhibition/: BIM-dependent-ERK-inhibition.yml  conditions.tsv  measurements.tsv
benchmarks/DNA-repair/: DNA-repair.yml  conditions.tsv  measurements.tsv  observables.tsv
benchmarks/ERK-AKT-dose-response/: ERK-AKT-dose-response.yml  conditions.tsv  observables.tsv
benchmarks/IFNg-pulse-response/: IFNg-pulse-response.yml
benchmarks/LINCS-RPPA-Abundance/: LINCS-RPPA-Abundance.yml
benchmarks/TRAIL-percent-death/: TRAIL-percent-death.yml  conditions.tsv  measurements.tsv  observables.tsv
benchmarks/TRAIL-time-to-death/: TRAIL-time-to-death.yml  conditions.tsv  measurements.tsv  observables.tsv
benchmarks/cell_cycle/: cell_cycle.yml  conditions.tsv  measurements.tsv  observables.tsv
benchmarks/cell_cycle/results/: 2025-07-17.pkl
benchmarks/etoposide-induced-cell-death/: conditions.tsv  etoposide-induced-cell-death.yml  measurements.tsv  observables.tsv
benchmarks/inhibition-of-stochastic-apoptosis/: conditions.tsv  inhibition-of-stochastic-apoptosis.yml  measurements.tsv  observables.tsv
benchmarks/p53-dynamics/: conditions.tsv  measurements.tsv  observables.tsv  p53-dynamics.yml
benchmarks/proliferation-growth/: conditions.tsv  measurements.tsv  observables.tsv  proliferation-growth.yml
benchmarks/receptor-ligand_cooperativity/: conditions.tsv  measurements.tsv  observables.tsv  receptor-ligand_cooperativity.yml
benchmarks/regulation-of-stochastic-proliferation/: conditions.tsv  measurements.tsv  observables.tsv  regulation-of-stochastic-proliferation.yml
benchmarks/ribosome-doubling-rate/: conditions.tsv  measurements.tsv  observables.tsv  ribosome-doubling-rate.yml
benchmarks/ribosome-doubling-rate/results/: 2025-07-14.pkl  2025-07-16.pkl
benchmarks/stochastic-expression/: measurements.tsv  observables.tsv  stochastic-expression.yml  visualizations.tsv
benchmarks/stochastic-expression/results/: 2025-07-17.pkl
benchmarks/survival-signaling/: conditions.tsv  measurements.tsv  observables.tsv  survival-signaling.yml
container/: SingleCell.Dockerfile  SingleCell.docker  apptainer.def  container-config.yaml
data/: Compartments.tsv  Parameters.tsv  Ratelaws.tsv  Ratelaws_old.tsv  SPARCED - Compartments.tsv  SPARCED - Ratelaws.tsv  SPARCED - Species.tsv  Species.tsv  config.yaml
include/singlecell/: ArgParsing.h  BaseModule.h  DeterministicModule.h  HybridModule.h  One4AllModule.h  SBMLHandler.h  Simulation.h  SingleCell.h  StochasticModule.h  utils.h
libs/muparser/: example2  muparser-targets.cmake  t_ParserTest
py_src/Experiment/: Manager.py  ResultsCacher.py  launcher.py
py_src/Experiment/creation/: new-benchmark-generator.py
py_src/Experiment/visualization/: viz_helpers.py
py_src/ModelBuilding/: 1  amici_model_builder.py  createModels.py  launcher.py
py_src/Simulate/: SingleCell.py
py_src/cli/: cli.py
py_src/tools/: incorrect_inspector.py  launcher.py
python/: DEV_Performance_Evaluation.ipynb  ETL File modifications.ipynb  ETL Parameter Table Build.ipynb  RunSPARCED.py  SGEmodule.py  SingleCell.py  _sbml_handler.py  createModels.py  file_loader.py  incorrect_inspector.py  plot_results.py  pyproject.toml  requirements.txt  simulation.py  species_name_converter.py  test_simulation.py  unit_converter.py
python/Experiment/: Experiment.py  MPI_Organizer.py  ObservableCalculator.py  Organizer.py  ResultsCacher.py  Visualizer.py  Worker.py  launcher.py
python/Experiment/creation/: observable_finder.py
python/Experiment/sedml/: builders.py
python/Experiment/simulation/: experiment_setup.py  job_organization.py  observable_calc.py  single_simulation.py  utils.py
python/Experiment/visualization/: benchmark evaluation notebook.ipynb  viz_helpers.py
python/ModelBuilding/: amici_model_builder.py  createModels.py  launcher.py
python/ModelBuilding/tools/: incorrect_inspector.py  plot_results.py  species_name_converter.py  unit_converter.py
python/cli/: cli.py
python/sdist/singlecell/Experiment/: Experiment.py  Manager.py  Worker.py  launcher.py
python/sdist/singlecell/Experiment/visualization/: benchmark evaluation notebook.ipynb
python/sdist/singlecell/ModelBuilding/: amici_model_builder.py  antimony_model_builder.py  build_process_organizer.py  launcher.py  ratelaw_handler.py  sbml_model_builder.py  singlecell_builder.py
python/sdist/singlecell/Simulate/: SingleCell.py  launcher.py
python/sdist/singlecell/cli/: cli.py
python/sdist/singlecell/shared_utils/: arguments.py  interface.py  utils.py
python/sdist/singlecell/tools/: incorrect_inspector.py  species_name_converter.py  unit_converter.py
python/shared_utils/: arguments.py  file_loader.py  utils.py
python/tools/: incorrect_inspector.py
sbml_files/: Deterministic.sbml  Hybrid.sbml  One4All.xml  Stochastic.sbml  antimony_Deterministic.txt  antimony_Hybrid.txt  antimony_One4All.txt  antimony_Stochastic.txt  antimony_stochastic.txt  deterministic.xml
sbml_files/sbml_files/: One4All.xml  antimony_deterministic.txt  deterministic.xml  stochastic.xml
src/: ArgParsing.cpp  BaseModule.cpp  DeterministicModule.cpp  HybridModule.cpp  One4AllModule.cpp  SBMLHandler.cpp  SBMLHandler.h  SPARCED - results.tsv  Simulation.cpp  Simulator.cpp  SingleCell.cpp  SingleCell.h  SingleCellSimulator.cpp  StochasticModule.cpp  bindings.cpp  decrease-10-fold-kTC-results.tsv  increase-10-fold-kTC-results.tsv  main.cpp  results.tsv  stochastic_module.h  utils.cpp
tests/: Deterministic.sbml  SingleCell.sbml  Stochastic.sbml  antimony_Deterministic.txt  antimony_SingleCell.txt  antimony_Stochastic.txt
tests/LR-data/: Compartments.tsv  LR Model - Parameters.tsv  LR Model - Ratelaws.tsv  LR Model - Species.tsv  Parameters.tsv  Ratelaws.tsv  Species.tsv  config.yaml
