[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SingleCell"
version = "0.0.1"
description = "A platform for for constructing, expanding, and simulating large-scale, single-cell mechanistic models."
authors = [
    { name = "Jonah Huggins", email = "JonahRileyHuggins@gmail.com" },
    { name = "Marc Birtwistle", email = "marc.birtwistle@gmail.com" },
    { name = "Aurore Amrit", email = "aurore.amrit@umu.se" },
    { name = "Atalanta Harley-Gasaway", email = "amhrnnd@g.clemson.edu" },
    { name = "Cemal Erdem", email = "Cemal.erdem@umu.se" }
]
license = {text = "GPL-2.0"}
dependencies = [
    "numpy==2.2.4",
    "scipy==1.14.0",
    "sympy==1.14.0",
    "pandas==2.3.1",
    "matplotlib==3.10.3",
    "python-libsbml==5.20.5",
    "antimony==2.12.0.2",
    "amici==0.34.0",
    "pyyaml==6.0.2",
    "lxml==6.0.0",
    "pyperclip==1.9.0"
]

requires-python = ">=3.12"
keywords = ["mechanistic modeling", "single-cell models", "simulation", "systems biology"]

readme = {file = "README.md", content-type = "text/markdown"}

[project.urls]
Homepage = "https://github.com/JonahRileyHuggins/SingleCell/"
Repository = "https://github.com/JonahRileyHuggins/SingleCell"

[project.scripts]
SingleCell = "singlecell.cli.cli:main"

[tool.setuptools]
packages = { find = { where = ["sdist"], include = ["singlecell*"] } }

[tool.setuptools.package-data]
"singlecell" = ["**/*.yaml", "**/*.json", "**/*.ini"]